Deleting apps now frees up space on an instance